# ai-sql-editor

./: .gitignore  Backlog.md  README.md  database.py  executor.py  main.py  models.py  pyproject.toml  routes.py  seed.py
backend/: agent.py  chat_service.py  executor.py  llm.py  logging_config.py  main.py  middleware.py  models.py  pyproject.toml  routes.py  seed.py  test_agent.sh  test_e2e.sh  test_end_to_end.sh  test_multi_turn.sh  test_supabase.sh
backend/agent/: __init__.py  chat_service.py  loop.py  prompts.py
backend/docs/: ARCHITECTURE.md
backend/models/: __init__.py  base.py  business.py  conversation.py  payment_schedule.py  payout.py  plan.py  skill.py
backend/routes/: __init__.py  chat.py  employees.py  execution.py  membership.py  payment_schedules.py  payouts.py  plans.py  skills.py
backend/schemas/: __init__.py  chat.py  commission.py  employee.py  execution.py  membership.py  payment_schedule.py  payout.py  plan.py  skill.py
backend/services/: commission_payout_service.py  data_access.py  executor.py  membership_service.py  payment_schedule_service.py  plan_service.py  sqlalchemy_plan_service.py
backend/tests/: conftest.py  helpers.sh  test_chat_agent.py  test_chat_agent.sh  test_clarification.py  test_clarification.sh  test_infrastructure.py  test_infrastructure.sh
backend/tools/: __init__.py  ask_clarification.py  base.py  create_plan.py  execute_query.py  infer_plan_config.py  set_membership_rules.py  update_plan.py  update_plan_config.py  update_sql_artifacts.py  validate_sql.py
docs/: ARCHITECTURE.md  ai-sql-editor-poc.md
(+111 files in other folders)
